k8s/federal/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "federal"
  annotations:
    mesh.cloud.google.com/proxy: '{"managed": true}'
  labels:
    name: istio-system
    istio.io/rev: asm-managed
    netpol: federal
spec: {}
status: {}
