k8s/federal/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: federal-virtual-service
  namespace: istio-ingress
spec:
  hosts:
    - "*.federal.iidi.alpha.phac.gc.ca"
  gateways:
    - istio-ingress/mesh-gateway
  http:
    - match:
        - headers:
            ":authority":
              exact: "federator.federal.iidi.alpha.phac.gc.ca"
      route:
        - destination:
            host: federator-svc.federal.svc.cluster.local
            port:
              number: 80
    - match:
        - headers:
            ":authority":
              exact: "rshiny-dashboard.federal.iidi.alpha.phac.gc.ca"
      route:
        - destination:
            host: rshiny-dashboard-svc.federal.svc.cluster.local
            port:
              number: 80
